human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_107.wast
(assert_invalid
  (module (func $type-cont-last-num-vs-empty (result i32)
    (loop (br 0 (i32.const 0)))
  ))
  "type mismatch"
)